src/objects/Channel_Business_Review__c.object
<CustomObject>
    <description>R5 Channel Business Review is a custom object to review the Channels, Partner, ABB Authorized value provider &amp; Strategic / Key Partner  who will be partnering with ABB to do business.</description>
    <fields>
        <fullName>CBR_Next_Review_Date__c</fullName>
        <formula>Joint_Business_Plan__r.Date_for_Next_Review__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBR Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>STR_Actual_Year_to_sales_Hidden__c</fullName>
        <description>It is Created for to display &quot; Actual Sales Year to Date value &quot; In CBR</description>
        <formula>(Joint_Business_Plan__r.Actual_Sales_Year_to_Date_Formula__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Actual Year to sales Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STR_Budget_Current_Year_Hidden__c</fullName>
        <formula>Joint_Business_Plan__r.Budget_Current_Year_formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Budget Current Year Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STR_Forecast_Current_Year_Hidden__c</fullName>
        <formula>Joint_Business_Plan__r.Forecast_Ongoing_Year_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Forecast Current Year	 Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STR_Previous_Year_Hideen__c</fullName>
        <formula>Joint_Business_Plan__r.Previous_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Previous Year Hideen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STR_Run_Rate_Current_Year_Hidden__c</fullName>
        <formula>Joint_Business_Plan__r.Rund_Rate_Ongoing_year_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Run Rate Current Year Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STR_Sales_Previous_Year_Hidden__c</fullName>
        <formula>Joint_Business_Plan__r.Sales_previous_year_formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Sales Previous Year Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STR_Target_2nd_Year_Hidden__c</fullName>
        <formula>Joint_Business_Plan__r.Target_2nd_Year_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Target 2nd Year Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STR_Target_3rd_Year_Hidden__c</fullName>
        <formula>Joint_Business_Plan__r.Target_3rd_Year_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Target 3rd Year Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Focused_Industry_hidden__c</fullName>
        <label>Focused Industry hidden</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line_Hidden_from_scope__c</fullName>
        <label>Product Line Hidden from scope</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Channel review to have a look-up relationship with the Account Object.</description>
        <inlineHelpText>The partner and business plan this review covers. If the scope is several branch offices, that need to be indicated in general comments below.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Channel_Business_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actions_Answer_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Text field to capture the Answer 1- Actions review section</description>
        <inlineHelpText>Review and update all actions related to this business plan. Add new actions as agreed. Indicate here when done by selecting the checkbox</inlineHelpText>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actions_Answer_2__c</fullName>
        <description>R5 - Text field to capture the Answer 2- Actions review section</description>
        <label>Total Number Of Actions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions_Flag1__c</fullName>
        <description>R5 - R5 - Flag for Must Have Question 1 in Actions section</description>
        <formula>IF( Actions_Answer_1__c==FALSE,IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions_Flag2__c</fullName>
        <description>R5 - Flag for Must Have Question 2 in Actions section</description>
        <formula>IF(ISBLANK(Actions_Answer_2__c),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Minimum one action must be registered in the business plan</inlineHelpText>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions_Question_1__c</fullName>
        <defaultValue>$Label.CBR_Actions_Question_1</defaultValue>
        <description>R5 - Text field to capture the Question 1- Actions review section</description>
        <inlineHelpText>Review and update all actions related to this business plan. Add new actions as agreed. Indicate here when done</inlineHelpText>
        <label>1.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actions_Question_2__c</fullName>
        <defaultValue>$Label.CBR_Actions_Question_2</defaultValue>
        <description>R5 - Text field to capture the Question 2- Actions review section</description>
        <label>Question 2</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Sales_Year_to_Date__c</fullName>
        <description>R5- Copy the value from the Channel Business Plan</description>
        <formula>Joint_Business_Plan__r.Actual_Sales_Year_to_Date_Formula__c</formula>
        <label>Actual Sales Year to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Answer_1__c</fullName>
        <description>R5 - Picklist to capture the Answer 1- Market trends and offering - Partner view section</description>
        <inlineHelpText>Pick the value closest to the partner&apos;s view</inlineHelpText>
        <label>Answer 1</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stable / OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Answer_2__c</fullName>
        <description>R5 - Picklist to capture the Answer 2- Market trends and offering - Partner view section</description>
        <inlineHelpText>Pick the value closest to the partner&apos;s view</inlineHelpText>
        <label>Answer 2</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stable / OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Answer_3__c</fullName>
        <description>R5 - Picklist to capture the Answer 3- Market trends and offering - Partner view section</description>
        <inlineHelpText>Indicate the current progress compared to what&apos;s stated in the business plan</inlineHelpText>
        <label>Answer 3</label>
        <picklist>
            <picklistValues>
                <fullName>No Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>As Planned or Exceeded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>R5 - Approval Date for Approval Process</description>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>R5 - Approval Status for Approval Process</description>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <description>R5 - Approver Name for Approval Process</description>
        <label>Approver Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Average_time_used_in_Techical__c</fullName>
        <description>R5- Channel Partner Business Reviews Field.</description>
        <inlineHelpText>% time used in Technical support of ABB products</inlineHelpText>
        <label>% time used in Techsupport of ABB prod</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_time_used_in_sales__c</fullName>
        <description>R5- Channel Partner Business Reviews Field.</description>
        <label>% time used in Sales of ABB products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_time_used_in_services__c</fullName>
        <description>R5- Channel Partner Business Reviews Field.</description>
        <label>% time used in Service of ABB products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BU_s_Covered__c</fullName>
        <description>R5 - BU&apos;s Covered</description>
        <formula>Joint_Business_Plan__r.BU_s_Covered__c</formula>
        <label>BU&apos;s Covered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Current_Year__c</fullName>
        <description>R5 - Budget Current Year copy from the channel business plan</description>
        <formula>Joint_Business_Plan__r.Budget_Current_Year_formula__c</formula>
        <label>Budget Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Channel_Market_Coverage_Hidden__c</fullName>
        <description>R5 Used to get the Channel market Coverage Name</description>
        <formula>Joint_Business_Plan__r.Channel_Market_Coverage__r.Name</formula>
        <label>Channel Market Coverage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_Operations_Section__c</fullName>
        <description>R5 - Comments field on Operations section</description>
        <inlineHelpText>Check that sufficient resources and skills are available to serve the market and also to keep the possible authorization. Assign actions as needed.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Completion__c</fullName>
        <description>R5 - Date of Completion when the Status is changed to Completed.</description>
        <inlineHelpText>The date the status of this review is changed to Completed</inlineHelpText>
        <label>Date of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_saving__c</fullName>
        <description>R5 - Date of saving.</description>
        <label>Date of saving</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_the_actual_sales_YTD_is_given__c</fullName>
        <formula>Joint_Business_Plan__r.Date_the_actual_sales_YTD_is_given__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date the actual sales YTD is given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_to_Complete__c</fullName>
        <description>R5 - Formula Field calculate days over/under due date for the channel business review</description>
        <formula>IF(
  ISBLANK(  Date_of_Completion__c  ),
  NULL,
   Expected_Date_for_Review_Completion__c - Date_of_Completion__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Date_for_Review_Completion__c</fullName>
        <description>R5 - Date for Next Review</description>
        <label>Expected Date for Review Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast_Current_Year__c</fullName>
        <description>R5 - Copy the Values from the Channel Business Plan</description>
        <formula>Joint_Business_Plan__r.Forecast_Ongoing_Year_Formula__c</formula>
        <label>Forecast Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>General_Answer_1__c</fullName>
        <description>R5 - Answer 1- General topics section</description>
        <inlineHelpText>Add comments if not OK (e.g. if overall financial concerns or if consistent overdue to ABB)</inlineHelpText>
        <label>Comment if not</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Answer_2__c</fullName>
        <description>R5 - Answer 2- General topics section</description>
        <inlineHelpText>Add comments if not OK (e.g. if customer(s) indicated that they do not want to work with this partner)</inlineHelpText>
        <label>Comment if not</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Answer_3__c</fullName>
        <description>R5 - Answer 3 - General topics section</description>
        <inlineHelpText>Check that sufficient resources and skills are available to serve the market and also to keep the possible authorization</inlineHelpText>
        <label>Answer 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <description>R5 - General Comments</description>
        <inlineHelpText>Overall impression and comments. Will be printed on summary page of review .pdf -report</inlineHelpText>
        <label>General Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Flag1__c</fullName>
        <description>R5 - Flag for Must Have Question1 in General Section</description>
        <formula>IF( AND( ISBLANK( General_Answer_1__c ), RecordType.DeveloperName= &quot;Channel_End_Period_Business_Review_Detail&quot; ),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Flag2__c</fullName>
        <description>R5 - Flag for Must Have Question 2 in General Section</description>
        <formula>IF( AND(ISBLANK( General_Answer_2__c), RecordType.DeveloperName= &quot;Channel_End_Period_Business_Review_Detail&quot; ),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Flag3__c</fullName>
        <description>R5 - Flag for Must Have Question 3 in General Section</description>
        <formula>IF( AND(ISBLANK( General_Answer_3__c), RecordType.DeveloperName= &quot;Channel_End_Period_Business_Review_Detail&quot; ),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Question_1__c</fullName>
        <defaultValue>$Label.CBR_General_Question_1</defaultValue>
        <description>R5 - Text field to capture the Question 1- General topics section</description>
        <inlineHelpText>ABB view on the financial stability and profitability. Sanity check to be done every year.</inlineHelpText>
        <label>1.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Question_2__c</fullName>
        <defaultValue>$Label.CBR_General_Question_2</defaultValue>
        <description>R5 - Text field to capture the Question 2- General topics section</description>
        <inlineHelpText>ABB view on the market reputation. Sanity check to be done every year.</inlineHelpText>
        <label>2.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Question_3__c</fullName>
        <defaultValue>$Label.CBR_General_Question_3</defaultValue>
        <description>R5 - Question 3 under General topic section</description>
        <inlineHelpText>Indicate if the partner still has competent persons to deliver the services expected</inlineHelpText>
        <label>Question 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Joint_Business_Plan__c</fullName>
        <description>R5-Channel review to have a look-up relationship with the Joint Business Plan Object.</description>
        <inlineHelpText>The partner business plan this review covers. If the scope is several branch offices, that need to be indicated in general comments below.</inlineHelpText>
        <label>Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipLabel>Channel Partner Business Reviews</relationshipLabel>
        <relationshipName>Channel_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Market_Trend_Flag1__c</fullName>
        <description>R5 - Flag for Must Have Question 1 in Market trends section</description>
        <formula>IF(ISPICKVAL( Answer_1__c , &quot;&quot;), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Trend_Flag2__c</fullName>
        <description>R5 - Flag for Must Have Question 2 in Market trends section</description>
        <formula>IF(ISPICKVAL( Answer_2__c , &quot;&quot;),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Trend_Flag3__c</fullName>
        <description>R5 - Flag for Must Have Question 3 in Market trends section</description>
        <formula>IF( ISPICKVAL( Answer_3__c , &quot;&quot;),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Persons_involved_in_Sales__c</fullName>
        <description>R5- Channel Partner Business Reviews Field.</description>
        <inlineHelpText>Number of sales people working with ABB products</inlineHelpText>
        <label>Sales people working with ABB products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Persons_involved_in_Service__c</fullName>
        <description>R5- Channel Partner Business Reviews Field.</description>
        <inlineHelpText>Number of service people working with ABB products</inlineHelpText>
        <label>Service people working with ABB products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Persons_involved_in_Technical__c</fullName>
        <description>R5- Channel Partner Business Reviews Field.</description>
        <inlineHelpText>Number of technical people working with ABB products</inlineHelpText>
        <label>Tech people working with ABB products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_1__c</fullName>
        <description>R5 - Notes on Each Section 1</description>
        <inlineHelpText>Additional information about market trend and offering</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_2__c</fullName>
        <description>R5 - Notes Section 2</description>
        <inlineHelpText>Additional information about sales and pipeline</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_3__c</fullName>
        <description>R5 - Notes Section 3</description>
        <inlineHelpText>Additional information about actions</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Operations_Section__c</fullName>
        <description>R5 - Notes Operations Section</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Record_Type_Value__c</fullName>
        <label>Old Record Type Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Answer_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Operations Answer Review Open Cases</description>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operations_Answer_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Operations Answer 2 Review of supply/ logistical related topics</description>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operations_Answer_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Operations Answer 3 Review and update ABB contacts</description>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PG_s_Covered__c</fullName>
        <description>R5 - PG&apos;s Covered</description>
        <formula>Joint_Business_Plan__r.PG_s_Covered__c</formula>
        <label>PG&apos;s Covered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Answer_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 -  Check box to capture Contact and Review update</description>
        <inlineHelpText>Review and update &quot;Contact Roles&quot; section under this Account. Notify Channel Manager if effects access rights to ABB tools. Check also contacts as indicated in Business plan. Check box when done.</inlineHelpText>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Flag1__c</fullName>
        <description>R5-R5 - Flag for Must Have Question 1 in Partner section</description>
        <formula>IF(Partner_Answer_1__c = FALSE,IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Question_1__c</fullName>
        <defaultValue>$Label.CBR_Partner_Question_1</defaultValue>
        <description>R5 - Text field to capture the Question 1- Partner resources section</description>
        <inlineHelpText>Review and update &quot;Contact Roles&quot; section under this Account. Notify Channel Manager if effects access rights to ABB tools. Check also contacts as indicated in Business plan.</inlineHelpText>
        <label>1.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Country__c</fullName>
        <description>R5 - Copies Primary Address from Account</description>
        <formula>TEXT( Account__r.Primary_Address_Country__c )</formula>
        <label>Primary Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Channel_Class__c</fullName>
        <description>R5 - Primary Channel Class from Channel Partner Business Plan</description>
        <formula>Joint_Business_Plan__r.Primary_Channel_Class__c</formula>
        <label>Primary Channel Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <defaultValue>$Label.CBR_Market_Question_1</defaultValue>
        <description>R5- View on market trend in the next 6 months (total market), compared to previous 6 months-Market trends and offering - Partner view section</description>
        <inlineHelpText>Partner view on expected sales trend for the next 6 months (total market); compared to the previous 6 months. Please indicate also market trend per focused industry further down the form.</inlineHelpText>
        <label>1.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_2__c</fullName>
        <defaultValue>$Label.CBR_Market_Question_2</defaultValue>
        <description>R5 -  Market trends and offering - Partner view section</description>
        <inlineHelpText>Partner view on change of ABB position against competitor products/offerings over past 6 months</inlineHelpText>
        <label>2.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_3__c</fullName>
        <defaultValue>$Label.CBR_Market_Question_3</defaultValue>
        <description>R5 - Progress on expanding portfolio as indicated in the portfolio survey - Market trends and offering - Partner view section</description>
        <inlineHelpText>Progress on expanding the ABB portfolio as indicated in the business plan</inlineHelpText>
        <label>3.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Operations_1__c</fullName>
        <defaultValue>$Label.CBR_Operations_Question_1</defaultValue>
        <description>R5 - Text field to capture the Question 1- Operations Review</description>
        <inlineHelpText>e.g. NPS, CCRP. Assign actions as needed</inlineHelpText>
        <label>1.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Operations_2__c</fullName>
        <defaultValue>$Label.CBR_Operations_Question_2</defaultValue>
        <description>R5 - Text field to capture the Question 2- Operations Review</description>
        <inlineHelpText>Delivery performance, stocking situation, process review/improvements. Assign actions as needed</inlineHelpText>
        <label>2.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resources_Contacts_Question_2__c</fullName>
        <defaultValue>$Label.CBR_Partner_Question_2</defaultValue>
        <description>R5 -  Text field to capture the Question 2- Resources and Partner Section</description>
        <label>2.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resources_Contacts_Question_3__c</fullName>
        <defaultValue>$Label.CBR_Partner_Question_3</defaultValue>
        <description>R5 - Text field to capture the Question 3- Resources and Partner Section</description>
        <label>3.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rund_Rate_Current_Year__c</fullName>
        <description>R5 - Copy the run rate from the channel business plan</description>
        <formula>Joint_Business_Plan__r.Rund_Rate_Ongoing_year_Formula__c</formula>
        <label>Rund Rate Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Answer_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Confirmed -click -Sales and pipeline review</description>
        <inlineHelpText>On Business plan -form, section &quot;Channel Sales Plan&quot;, update fields Actual YTD (+ date) and forecast ongoing year. Indicate here when done by selecting the checkbox.</inlineHelpText>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Answer_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5-Sales and pipeline review section</description>
        <inlineHelpText>Review all open opportunities with the partner and update info as needed. Ensure that relevant opportunities are also registered in this tool. Indicate here when done by selecting the checkbox.</inlineHelpText>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Answer_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5-Sales and pipeline review section</description>
        <inlineHelpText>Review all open opportunities with the partner and update info as needed. Ensure that relevant opportunities are also registered in this tool. Indicate here when done by selecting the checkbox.</inlineHelpText>
        <label>Answer 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Flag1__c</fullName>
        <description>R5 - Flag for Must Have Question 1 in Sales section</description>
        <formula>IF(Sales_Answer_1__c = FALSE,IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Flag2__c</fullName>
        <description>R5 - Flag for Must Have Question 2 in Sales section</description>
        <formula>IF( Sales_Answer_2__c == FALSE, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Flag3__c</fullName>
        <description>R5 - Flag for Must Have Question 3 in Sales section</description>
        <formula>IF(Sales_Answer_3__c = FALSE,IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Previous_Year__c</fullName>
        <description>R5 - Sales Previous Year formula field to copy from CBP</description>
        <formula>Joint_Business_Plan__r.Sales_previous_year_formula__c</formula>
        <label>Sales Previous Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Question_1__c</fullName>
        <defaultValue>$Label.CBR_Sales_Question_1</defaultValue>
        <description>R5 - Update Sales Status, target, forecast -  Sales and pipeline review section</description>
        <inlineHelpText>Under Sales Targets and Results in  Business plan, update fields Actual YTD (+ date) and Forecast current year. Indicate here when done. Tip: use Mass Edit functionality..</inlineHelpText>
        <label>1.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Question_2__c</fullName>
        <defaultValue>$Label.CBR_Sales_Question_3</defaultValue>
        <description>R5 - Text field to capture the Question 2- Sales and pipeline review section</description>
        <inlineHelpText>Review all open opportunities with the partner and update info as needed. Ensure that relevant opportunities are also registered in this tool. Indicate here when done.</inlineHelpText>
        <label>2.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Question_3__c</fullName>
        <defaultValue>$Label.CBR_Sales_Question_3</defaultValue>
        <description>R5 - Text field to capture the Question 3- Sales and pipeline review section</description>
        <inlineHelpText>Review all open opportunities with the partner and update info as needed. Ensure that relevant opportunities are also registered in this tool. Indicate here when done.</inlineHelpText>
        <label>Question 3</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>